--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Gill Sans, sans-serif;
+    font-family: Veranda, sans-serif;
     text-align: center;
     background-color: #f4f4f9;
     margin: 0;
