--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
 #timer1 { background-color: #ffadad; }
