--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h1 {
 #timer1 { background-color: #ffadad; }
 #timer2 { background-color: #ffd6a5; }
 #timer3 { background-color: #fdffb6; }
-#timer4 { background-color: #caffbf; }
+#timer4 { background-color: #bdb2ff; }
 #timer5 { background-color: #9bf6ff; }
 #timer6 { background-color: #a0c4ff; }
 #timer7 { background-color: #bdb2ff; }
